# company-scoring-ai-itpark

./: LICENSE  README.md  pyproject.toml
src/itpark_scoring/: __init__.py  app.py  collector.py  llm.py  models.py  reports.py  storage.py  utils.py
src/itpark_scoring.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
